--- a/main.html
+++ b/main.html
@@ -9,9 +9,9 @@
 <body style="background-color:#f5f5f5;">
 	<!-- the entire body must be written by student -->
 	<div class="container">
-		<div class="item header">
+		<header class="item header">
 			<h2>Shaw's News</h2>
-		</div>
+		</header>
 		<div class="section">
 			<div class="item latest-news-section">
 				<h3>Latest News Articles</h3>
